--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Module 11: Express.js (First Full Stack Web Development)",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "repository": {
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/smalone9/zookeepr#readme",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6"
   }
 }
